--- a/public/css/main.css
+++ b/public/css/main.css
@@ -232,6 +232,21 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  width: 90%;
+  border: 1px solid #4771fa;
+  padding: 1rem;
+  border-radius: 3px;;
+  background-color: #b9c9ff;
+  color: white;
+  text-align: center;
+}
+.user-message--error {
+  border: 1px solid red;
+  background-color: #b44b83;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -239,5 +254,8 @@ form {
 
   #side-menu-toggle {
     display: none;
+  }
+  .user-message {
+    width: 30rem;
   }
 }
