reset password with email

--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -12,19 +12,15 @@
             <%= errorMessage %>
         </div>
         <% } %>
-        <form class="login-form" action="/login" method="POST">
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
+        <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Login</button>
-            |
-            <a href="/reset" class="btn" type="button">Forgot password ?</a>
+            <input type="hidden" name="userId" value="<%= userId %>">
+            <input type="hidden" name="token" value="<%= token %>">
+            <button class="btn" type="submit">Update password</button>
         </form>
     </main>
     <%- include('../includes/end.ejs') %>
