--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -15,11 +15,19 @@
         <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="text" name="email" id="email" value="<%= oldInput.email %>">
+                <input 
+                class="<%= validationErrors.find(err => err.param === 'email') ? 'invalid' : '' %>"
+                type="text"
+                name="email"
+                id="email"
+                value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" value="<%= oldInput.password %>">
+                <input
+                class="<%= validationErrors.find(err => err.param === 'password') ? 'invalid' : '' %>"
+                type="password"
+                name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
