--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,26 +8,20 @@
 
     <main>
         <% if (errorMessage) { %>
-            <div class="user-message user-message--error">
-                <%= errorMessage %>
-            </div>
-            <% } %>
+        <div class="user-message user-message--error">
+            <%= errorMessage %>
+        </div>
+        <% } %>
         <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input 
-                class="<%= validationErrors.find(err => err.param === 'email') ? 'invalid' : '' %>"
-                type="text"
-                name="email"
-                id="email"
-                value="<%= oldInput.email %>">
+                <input class="<%= validationErrors.find(err => err.param === 'email') ? 'invalid' : '' %>" type="text"
+                    name="email" id="email" value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input
-                class="<%= validationErrors.find(err => err.param === 'password') ? 'invalid' : '' %>"
-                type="password"
-                name="password" id="password" value="<%= oldInput.password %>">
+                <input class="<%= validationErrors.find(err => err.param === 'password') ? 'invalid' : '' %>"
+                    type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <div class="form-control">
                 <label for="confirmPassword">Confirm Password</label>
