--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -13,15 +13,14 @@
         </div>
         <% } %>
         <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>"
-            method="POST">
+            method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input class="<%= validationErrors.find(err => err.param === 'title') ? 'invalid' : '' %>" type="text" name="title" id="title" value="<% if (editing || hasError)  { %><%= product.title %><% } %>">
             </div>
             <div class="form-control">
-                <label for="imageUrl">Image URL</label>
-                <input class="<%= validationErrors.find(err => err.param === 'imageUrl') ? 'invalid' : '' %>" type="text" name="imageUrl" id="imageUrl"
-                    value="<% if (editing) { %><%= product.imageUrl %><% } %>">
+                <label for="image">Image</label>
+                <input type="file" name="image" id="image">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
